Fix Posit Cloud deployment with proper structure
- Removed manual manifest.json (should be auto-generated)
- Added global.R for package loading (Shiny best practice)
- Enhanced DESCRIPTION with proper Shiny app metadata
- Simplified app.R (packages loaded in global.R)
- Added .rscignore to exclude unnecessary deployment files
- Structure now follows Posit Cloud deployment standards

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Title: fastcpd Web Application
 Type: Shiny
+DisplayMode: Showcase
 Imports:
-    shiny,
-    shinydashboard,
-    DT,
-    plotly,
-    fastcpd
+    shiny (>= 1.7.0),
+    shinydashboard (>= 0.7.0),
+    DT (>= 0.20),
+    plotly (>= 4.10.0),
+    fastcpd (>= 0.14.0)
