Update manifest.json configuration
- Further updates to manifest.json for Posit Cloud compatibility
- Deployment configuration refinements

--- a/manifest.json
+++ b/manifest.json
@@ -807,9 +807,9 @@
         "Type": "Package",
         "Package": "fastcpd",
         "Title": "Fast Change Point Detection via Sequential Gradient Descent",
-        "Version": "0.16.3",
+        "Version": "0.16.2",
         "Authors@R": "c(\n    person(\"Xingchi\", \"Li\", , \"anthony.li.stat.tamu.edu@lixingchi.com\", role = c(\"aut\", \"cre\", \"cph\"),\n           comment = c(ORCID = \"0009-0006-2493-0853\")),\n    person(\"Xianyang\", \"Zhang\", , \"zhangxiany@stat.tamu.edu\", role = c(\"aut\", \"cph\"))\n  )",
-        "Description": "Implements fast change point detection algorithm based on\n        the paper \"Sequential Gradient Descent and Quasi-Newton's\n        Method for Change-Point Analysis\" by Xianyang Zhang, Trisha\n        Dawn <https://proceedings.mlr.press/v206/zhang23b.html>. The\n        algorithm is based on dynamic programming with pruning and\n        sequential gradient descent. It is able to detect change points\n        a magnitude faster than the vanilla Pruned Exact Linear\n        Time(PELT). The package includes examples of linear regression,\n        logistic regression, Poisson regression, penalized linear\n        regression data, and whole lot more examples with custom cost\n        function in case the user wants to use their own cost function.",
+        "Description": "Implements fast change point detection algorithm based on the\n    paper \"Sequential Gradient Descent and Quasi-Newton's Method for\n    Change-Point Analysis\" by Xianyang Zhang, Trisha Dawn\n    <https://proceedings.mlr.press/v206/zhang23b.html>. The algorithm is\n    based on dynamic programming with pruning and sequential gradient\n    descent. It is able to detect change points a magnitude faster than\n    the vanilla Pruned Exact Linear Time(PELT). The package includes\n    examples of linear regression, logistic regression, Poisson\n    regression, penalized linear regression data, and whole lot more\n    examples with custom cost function in case the user wants to use their\n    own cost function.",
         "License": "GPL (>= 3)",
         "URL": "https://fastcpd.xingchi.li, https://github.com/doccstat/fastcpd",
         "BugReports": "https://github.com/doccstat/fastcpd/issues",
@@ -824,16 +824,14 @@
         "Encoding": "UTF-8",
         "LazyData": "true",
         "RoxygenNote": "7.3.2",
-        "Config/pak/sysreqs": "make",
-        "Repository": "https://doccstat.r-universe.dev",
-        "RemoteUrl": "https://github.com/doccstat/fastcpd",
-        "RemoteRef": "HEAD",
-        "RemoteSha": "399a69d6a9b1a2d343aa298c49f4ca5f373b034e",
         "NeedsCompilation": "yes",
-        "Packaged": "2025-04-27 16:27:37 UTC; root",
-        "Author": "Xingchi Li [aut, cre, cph] (ORCID:\n    <https://orcid.org/0009-0006-2493-0853>),\n  Xianyang Zhang [aut, cph]",
+        "Packaged": "2025-04-25 04:01:10 UTC; doccstat",
+        "Author": "Xingchi Li [aut, cre, cph] (<https://orcid.org/0009-0006-2493-0853>),\n  Xianyang Zhang [aut, cph]",
         "Maintainer": "Xingchi Li <anthony.li.stat.tamu.edu@lixingchi.com>",
-        "Built": "R 4.5.0; aarch64-apple-darwin20; 2025-04-27 16:39:03 UTC; unix"
+        "Repository": "CRAN",
+        "Date/Publication": "2025-04-25 04:20:01 UTC",
+        "Built": "R 4.5.0; aarch64-apple-darwin20; 2025-04-25 04:49:09 UTC; unix",
+        "Archs": "fastcpd.so.dSYM"
       }
     },
     "fastmap": {
