Fix Posit Connect deployment - clean directory structure
- Moved all documentation files to docs/ folder
- Moved utility scripts to docs/ folder
- Updated .rscignore to exclude docs/ and documentation
- Updated manifest.json with explicit Shiny configuration:
  - Added entrypoint: server.R
  - Set content_category: shiny
- Main directory now contains only essential Shiny app files
- This should fix the file listing issue on Posit Connect

--- a/.rscignore
+++ b/.rscignore
@@ -1,11 +1,6 @@
 # Files to ignore during Posit Cloud deployment
 .git
 .gitignore
+docs/
 *.md
-run_app.sh
-upload_to_github.sh
-install_packages.R
-IMPROVEMENTS.md
-PROJECT_STRUCTURE.md
-renv.lock
-deploy.R
+.Rprofile
