--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,10 @@
   "platform": "4.5.0",
   "metadata": {
     "appmode": "shiny",
+    "entrypoint": "server.R",
     "primary_rmd": null,
     "primary_html": null,
-    "content_category": null,
+    "content_category": "shiny",
     "has_parameters": false
   },
   "environment": {
@@ -2831,9 +2832,6 @@
     ".Rprofile": {
       "checksum": "6dccb563edfb40b23040efcd654f7fca"
     },
-    "app.R": {
-      "checksum": "1df28794d1007c4623b71b53eec8dcd3"
-    },
     "DESCRIPTION": {
       "checksum": "5331e4d49e7001eba5a6ad7ad405b0a8"
     },
@@ -2857,6 +2855,9 @@
     },
     "server.R": {
       "checksum": "f92b35acc8dd2b0cc3abe1331f9d2ec5"
+    },
+    "ui.R": {
+      "checksum": "1df28794d1007c4623b71b53eec8dcd3"
     }
   },
   "users": null
