Add app.R as single entry point for Posit Connect
- Created app.R that sources ui.R, server.R, and global.R
- Updated manifest.json to use app.R as entrypoint
- This single-file approach should be more reliably recognized by Posit Connect
- Keeps the modular structure while providing clear entry point

--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,10 @@
   "platform": "4.5.0",
   "metadata": {
     "appmode": "shiny",
-    "entrypoint": "server.R",
+    "entrypoint": "app.R",
     "primary_rmd": null,
     "primary_html": null,
-    "content_category": "shiny",
+    "content_category": null,
     "has_parameters": false
   },
   "environment": {
