Remove app.R and update manifest for clean multi-file structure
- Deleted app.R to use pure multi-file Shiny structure
- Updated manifest.json with clean format and R version info
- Set content_category to 'application' for proper recognition
- Files now explicitly listed: ui.R, server.R, global.R + data files
- Should work better with Posit Connect multi-file detection

--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,27 @@
   "version": 1,
   "appmode": "shiny",
   "content_category": "application",
+  "platform": "4.5.0",
+  "R": {
+    "version": "4.5.0"
+  },
+  "packages": {
+    "shiny": {
+      "source": "CRAN"
+    },
+    "shinydashboard": {
+      "source": "CRAN"
+    },
+    "DT": {
+      "source": "CRAN"
+    },
+    "plotly": {
+      "source": "CRAN"
+    },
+    "fastcpd": {
+      "source": "CRAN"
+    }
+  },
   "files": [
     "global.R",
     "server.R",
@@ -10,12 +31,5 @@
     "sample_data/linear_regression.csv",
     "sample_data/mean_change.csv",
     "sample_data/variance_change.csv"
-  ],
-  "packages": {
-    "shiny": { "source": "CRAN" },
-    "shinydashboard": { "source": "CRAN" },
-    "DT": { "source": "CRAN" },
-    "plotly": { "source": "CRAN" },
-    "fastcpd": { "source": "CRAN" }
-  }
+  ]
 }
