Add platform version to manifest.json
- Added platform R version 4.5.0 for deployment compatibility
- Maintains minimal manifest structure with essential fields
- Should improve Posit Connect deployment reliability

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
-    "version": 1,
-    "appmode": "shiny",
-    "content_category": "application"
+  "version": 1,
+  "platform": "4.5.0",
+  "appmode": "shiny",
+  "content_category": "application"
 }
